--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
       <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li></li>
-          <li><a href="#">Portfolio</a></li>
-          <li></li>
-          <li><a href="#">Contacts</a></li>
-          <li></li>
+          <li><a href="#Studio">Studio</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -35,7 +32,7 @@
       </section>
 
       <section>
-        <h2></h2>
+        <!--<h2></h2>-->
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -116,15 +113,12 @@
     </main>
 
     <footer>
-      <ul>
-        <li><a href="./index.html">WebStudio</a></li>
-        <li>
-          <p>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </li>
-      </ul>
+      <li><a href="./index.html">WebStudio</a></li>
+
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
