--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#Studio">Studio</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -32,7 +32,7 @@
       </section>
 
       <section>
-        <!--<h2></h2>-->
+        <h2>/</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -113,8 +113,7 @@
     </main>
 
     <footer>
-      <li><a href="./index.html">WebStudio</a></li>
-
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
