--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
 
       <section>
-        <h2>/</h2>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
