--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html"> WEBSTUDIO </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
