--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"> WebStudio </a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -32,7 +32,7 @@
       </section>
 
       <section>
-        <h2></h2>
+        <h2>для читалок та пошукових систем</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-      <a href="./index.html"> WEBSTUDIO </a>
+      <a href="./index.html"> WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
