--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
       <a href="./index.html"> WebStudio </a>
       <nav>
-        <a href="">Studio</a>
-        <a href="">Portfolio</a>
-        <a href="">Contacts</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
         <ul>
