--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <a href=""> WebStudio </a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
