--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <body>
     <header>
+      <a href="./index.html"> WebStudio </a>
       <nav>
         <ul>
-          <li><a href="./index.html">WebStudio</a></li>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
