--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
 
       <section>
-        <h2>для читалок та пошукових систем</h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
